chore: Add snapshot endpoint
